--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@line/liff": "^2.3.3",
+    "@line/liff": "2.18.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
