--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9000",
+    "dev": "next dev",
+    "dev:https": "HTTPS=true node ./server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@line/liff": "2.18.1",
+    "express": "^4.17.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
